--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,10 +18,11 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="86sp"
+        android:textColor="#000000"
         android:fontFamily="@font/anton_regular"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:id="@+id/el_centro_image" />
+        android:id="@+id/el_centro_title" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
         android:text="@string/organization_name"
         android:textSize="26sp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/el_centro_image"
+        android:layout_below="@id/el_centro_title"
         android:id="@+id/organization_name" />
 
     <LinearLayout
