--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/el_centro_landscape1"
         android:scaleType="centerCrop"
-        android:alpha="0.5"/>
+        android:alpha="0.4"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="@string/organization_name"
         android:textSize="26sp"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/el_centro_title"
         android:id="@+id/organization_name" />
@@ -47,6 +48,7 @@
             android:layout_height="wrap_content"
             android:text="@string/address"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:id="@+id/street_address" />
     </LinearLayout>
 
@@ -65,6 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/phone_number"
+            android:textStyle="bold"
             android:textSize="18sp" />
     </LinearLayout>
 
@@ -75,7 +78,8 @@
         android:textSize="18sp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/phone_number"
-        android:id="@+id/office_hours" />
+        android:id="@+id/office_hours"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/website"
