fixed phone dialing intent

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -62,6 +62,7 @@
             android:id="@+id/phone_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="dialPhoneNumber"
             android:src="@drawable/ic_phone_black_18dp"/>
         <TextView
             android:layout_width="wrap_content"
