--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -42,6 +42,7 @@
             android:id="@+id/navigation_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="launchMap"
             android:src="@drawable/ic_navigation_black_18dp"/>
         <TextView
             android:layout_width="wrap_content"
